wk_taa_taaqa/src/objects/Beginning_Inventory__c.object
<CustomObject>
    <description>Object that acts as a repository of all the Beginning Inventory by DTN</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Beginning Inventory</relationshipLabel>
        <relationshipName>Beginning_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BI_Year__c</fullName>
        <label>BI Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_DTN__c</fullName>
        <label>Inventory DTN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Value__c</fullName>
        <label>Inventory Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_User__c</fullName>
        <formula>if( Retention_DTN__c =   $User.SAP_DTN__c  ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Type__c</fullName>
        <label>Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CBR</fullName>
                </value>
                <value>
                    <fullName>OBR</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retention_DTN__c</fullName>
        <description>The Retention DTN to be populated with cross-reference data</description>
        <label>Retention DTN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Number__c</fullName>
        <label>SAP Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Number__c</fullName>
        <label>SAP Material Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Beginning Inventory</label>
    <nameField>
        <label>Beginning Inventory</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beginning Inventory</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>